Prevent word wrap in <pre> on inspector dialog

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -138,3 +138,8 @@ body {
 .js-html-inspector:hover .js-btn-inspector {
     display: block;
 }
+#dialog-html-inspector pre {
+    word-break: normal;
+    word-wrap: normal;
+    white-space: pre;
+}
